--- a/src/pages/LandingPage/components/GovernanceSection/GovernanceSection.css
+++ b/src/pages/LandingPage/components/GovernanceSection/GovernanceSection.css
@@ -59,33 +59,30 @@
 
 .lp-9-governance-circle-group {
   position: absolute;
-  width: 346.047px;
+  width: 390.047px;
   height: 360px;
   left: 50%;
   top: 50%;
   transform: translate(-30%, -50%);
 }
 
-/* Ellipse Background */
-.lp-9-ellipse-bg {
+/* Outer Governance Circle Image */
+.lp-9-outer-circle-image {
   position: absolute;
-  left: 0;
-  top: 19.2px;
-  width: 340.798px;
-  height: 340.798px;
-  z-index: 0;
-  pointer-events: none;
+  width: 380px;
+  height: 380px;
+  object-fit: contain;
+  left: -15px;
+  top: -10.2px;
 }
 
-/* Ellipse Background */
-.lp-9-ellipse-bg {
-  position: absolute;
-  left: 0;
-  top: 19.2px;
-  width: 340.798px;
-  height: 340.798px;
-  z-index: 0;
-  pointer-events: none;
+@keyframes rotate-lp9-outer {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 /* Radiant Glow */
@@ -156,101 +153,12 @@
   pointer-events: none;
 }
 
-/* Community Avatars */
-.lp-9-avatar {
-  position: absolute;
-  border-radius: 50%;
-  background: linear-gradient(180deg, #F4F4F4 0%, #FEFEFE 100%);
-  z-index: 3;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
-}
 
-.lp-9-avatar-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-/* Avatar Positions */
-.lp-9-avatar-top {
-  left: 143.2px;
-  top: -7.22px;
-  width: 60px;
-  height: 60px;
-  border: 5.523px solid white;
-  padding: 5.83px;
-}
-
-.lp-9-avatar-top .lp-9-avatar-img {
-  width: 48px;
-  height: 48px;
-}
-
-.lp-9-avatar-left {
-  left: -18.07px;
-  top: 116.35px;
-  width: 48px;
-  height: 48px;
-  border: 4.174px solid white;
-  padding: 4.07px;
-}
-
-.lp-9-avatar-left .lp-9-avatar-img {
-  width: 40px;
-  height: 40px;
-}
-
-.lp-9-avatar-bottom-left {
-  left: 34.72px;
-  top: 296.07px;
-  width: 48px;
-  height: 48px;
-  border: 4.174px solid white;
-  padding: 4.47px;
-}
-
-.lp-9-avatar-bottom-left .lp-9-avatar-img {
-  width: 39.065px;
-  height: 39.065px;
-}
-
-.lp-9-avatar-bottom-right {
-  left: 249.29px;
-  top: 297.99px;
-  width: 60px;
-  height: 60px;
-  border: 5.523px solid white;
-  padding: 5.91px;
-}
-
-.lp-9-avatar-bottom-right .lp-9-avatar-img {
-  width: 48.188px;
-  height: 48.188px;
-}
-
-.lp-9-avatar-right {
-  left: 305.74px;
-  top: 110.53px;
-  width: 60px;
-  height: 60px;
-  border: 5.41px solid white;
-  padding: 5.58px;
-}
-
-.lp-9-avatar-right .lp-9-avatar-img {
-  width: 48.842px;
-  height: 48.842px;
-}
 
 /* Center Governance Icon */
 .lp-9-center-icon {
   position: absolute;
-  left: 50%;
+  left: 45%;
   top: 50%;
   transform: translate(calc(-50% - 2.343px), calc(-50% + 9.885px));
   width: 87.474px;
